--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.2",
     "@supabase/supabase-js": "^2.57.4",
     "antd": "^5.27.4",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
